--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 	<title>Event ticketing</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="style.css">
-<!--   <link rel="stylesheet"
+
+  <link rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-    crossorigin="anonymous"> -->
-    <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> -->
+    crossorigin="anonymous">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
 
 </head>
 
@@ -66,7 +68,7 @@
           <div class="img">
            <img src="img/Layer.jpg" alt="my Event" width="300" height="200"></a>
            <div class="date">16:00:00</div>
-           <div class="desc">Suya canival<span><a id={{index}} >5ae</a></span></div>
+           <div class="desc">Suya canival<span><a id={{index}} >5 	ae</a></span></div>
          </div>
           <button id={{index}} class="book btn btn-block" >Book</button>
        </div>
@@ -95,15 +97,18 @@
 </script>
 	</section>
 
- <!-- <script src = https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.map></script> -->
-
-
-<!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"></script>
-
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script> 
-  <!-- <script src="https://unpkg.com/@aeternity/aepp-sdk/dist/aepp-sdk.browser-script.js"></script> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.js"></script> 
-<script type="text/javascript" src="event.js"></script>
 </body>
 </html>
+<script type="text/javascript" src="event.js"></script>
+ <script src = https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.map></script>
+
+
+ <script src = https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.map></script>
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script> 
+  <script src="https://unpkg.com/@aeternity/aepp-sdk/dist/aepp-sdk.browser-script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.js"></script> 
+
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+  integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+  crossorigin="anonymous"></script>
