--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
          <div id="ticEvent">
           <div class="img">
-           <img src="{{eventImg}}" width="300" height="200"></a>
+           <img src="img/{{eventImg}}" width="300" height="200"></a>
            <div class="date">Time: {{timeStamp}}</div>
            <div class="desc">{{eventDetails}} <span> <a id={{index}}>{{eventPrice}}</a></span></div>
          </div>
